# MapleOS

./: CMakeLists.txt
Components/: Memory.cpp  Memory.h
OS/: Interpreter.cpp  Interpreter.h  Main.cpp  Shell.cpp  Shell.h  System.cpp  System.h
Utilities/: SystemColors.cpp
include/: Memory.h
include/OS/: Shell.h
include/Utilities/: MemoryUtils.h  SystemColors.h  SystemUtils.h
